--- a/.github/workflows/ibm.yml
+++ b/.github/workflows/ibm.yml
@@ -3,8 +3,6 @@ name: IBM Cloud Auto Restart
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
   schedule:
     - cron: '0 12 * * FRI'
 
@@ -34,11 +32,10 @@ jobs:
         RESOURSE_ID: ${{ secrets.RESOURSE_ID }}
       run: |
         ./IBM_Cloud_CLI/ibmcloud target -g "$RESOURSE_ID"
-        ./IBM_Cloud_CLI/ibmcloud cf install -v 6.51.0 
-        /IBM_Cloud_CLI/ibmcloud cf install -v 6.51.0 
+        ./IBM_Cloud_CLI/ibmcloud target --cf
+        ./IBM_Cloud_CLI/ibmcloud cf install -f -v 6.15.0
     - name: Restart IBM Cloud
       env:
         IBM_APP_NAME: ${{ secrets.IBM_APP_NAME }}
       run: |
         ./IBM_Cloud_CLI/ibmcloud cf restart "$IBM_APP_NAME"
-
